# ClipTex

./: Cargo.toml  README.md
src/: main.rs
templates/: basic.tex
