[package]
name = "clip_tex"
version = "0.1.0"
edition = "2021"
description = "This is a tool to quickly run the Latex pipeline for a snippet in your clipboard and give you an image!"
keywords = ["cli", "latex", "clipboard"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.1.0"
clipboard-master = "3.1.3"
latex = "0.3.1"
image = "0.24.4"
notify-rust = "4.5.10"