[package]
name = "clip_tex"
version = "0.1.0"
edition = "2021"
description = "This is a tool to quickly run the Latex pipeline for a snippet in your clipboard and give you an image!"
keywords = ["cli", "latex", "clipboard"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.1.0"
image = "0.24.4"
notify-rust = "4.5.10"
inputbot = "0.5.1"
tectonic = "0.9.0"
poppler = "0.3.2"
cairo-rs = "0.15.12"
env_logger = "0.9.1"
log = "0.4.17"
ctrlc = "3.2.3"

# [package.metadata.cross.target.x86_64-pc-windows-gnu]
# xargo = false
# image = "test-image"
# runner = "custom-runner"

# [target.x86_64-pc-windows-gnu]
# passthrough = [
#     "RUST_DEBUG",
# ]